sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:13: error: not found: value bon
    echange(bon,i)
            ^